--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
+    "@hookform/resolvers": "^5.0.1",
     "@neondatabase/serverless": "^1.0.1",
     "@opentelemetry/api": "^1.9.0",
     "@prisma/client": "^6.9.0",
@@ -35,6 +36,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
